--- a/Step 11 Online Learning.ipynb
+++ b/Step 11 Online Learning.ipynb
@@ -25,45 +25,45 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: tensorflow-io in c:\\users\\manish\\anaconda3\\lib\\site-packages (0.22.0)\n",
-      "Requirement already satisfied: tensorflow-io-gcs-filesystem==0.22.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow-io) (0.22.0)\n",
       "Requirement already satisfied: tensorflow<2.8.0,>=2.7.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow-io) (2.7.0)\n",
-      "Requirement already satisfied: tensorboard~=2.6 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.7.0)\n",
-      "Requirement already satisfied: keras<2.8,>=2.7.0rc0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.7.0)\n",
-      "Requirement already satisfied: keras-preprocessing>=1.1.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.1.2)\n",
-      "Requirement already satisfied: six>=1.12.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.15.0)\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.2.0)\n",
-      "Requirement already satisfied: flatbuffers<3.0,>=1.12 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.0)\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.1.0)\n",
-      "Requirement already satisfied: tensorflow-estimator<2.8,~=2.7.0rc0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.7.0)\n",
-      "Requirement already satisfied: h5py>=2.9.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.10.0)\n",
-      "Requirement already satisfied: numpy>=1.14.5 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.19.5)\n",
-      "Requirement already satisfied: wheel<1.0,>=0.32.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.35.1)\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.42.0)\n",
-      "Requirement already satisfied: wrapt>=1.11.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.11.2)\n",
+      "Requirement already satisfied: tensorflow-io-gcs-filesystem==0.22.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow-io) (0.22.0)\n",
       "Requirement already satisfied: gast<0.5.0,>=0.2.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.4.0)\n",
-      "Requirement already satisfied: absl-py>=0.4.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.0.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.7.4.3)\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.6.3)\n",
       "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.3.0)\n",
-      "Requirement already satisfied: protobuf>=3.9.2 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.19.1)\n",
       "Requirement already satisfied: libclang>=9.0.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (12.0.0)\n",
+      "Requirement already satisfied: keras<2.8,>=2.7.0rc0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.7.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.6.3)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.2.0)\n",
+      "Requirement already satisfied: tensorflow-estimator<2.8,~=2.7.0rc0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.7.0)\n",
+      "Requirement already satisfied: absl-py>=0.4.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.0.0)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.1.0)\n",
+      "Requirement already satisfied: numpy>=1.14.5 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.19.5)\n",
+      "Requirement already satisfied: tensorboard~=2.6 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.7.0)\n",
+      "Requirement already satisfied: flatbuffers<3.0,>=1.12 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.0)\n",
+      "Requirement already satisfied: protobuf>=3.9.2 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.19.1)\n",
+      "Requirement already satisfied: h5py>=2.9.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.10.0)\n",
+      "Requirement already satisfied: keras-preprocessing>=1.1.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.1.2)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.42.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.7.4.3)\n",
+      "Requirement already satisfied: wheel<1.0,>=0.32.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.35.1)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.11.2)\n",
+      "Requirement already satisfied: six>=1.12.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.15.0)\n",
       "Requirement already satisfied: setuptools>=41.0.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (50.3.1.post20201107)\n",
-      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.6.1)\n",
       "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.4.6)\n",
-      "Requirement already satisfied: werkzeug>=0.11.15 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.0.1)\n",
-      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.3.6)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.24.0)\n",
-      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.8.0)\n",
       "Requirement already satisfied: google-auth<3,>=1.6.3 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.3.3)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.6.1)\n",
+      "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.8.0)\n",
+      "Requirement already satisfied: werkzeug>=0.11.15 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.0.1)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.24.0)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.3.6)\n",
       "Requirement already satisfied: cachetools<5.0,>=2.0.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (4.2.4)\n",
       "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.2.8)\n",
       "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (4.8)\n",
       "Requirement already satisfied: requests-oauthlib>=0.7.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.3.0)\n",
       "Requirement already satisfied: importlib-metadata>=4.4 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from markdown>=2.6.8->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (4.8.2)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.10)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2020.12.5)\n",
       "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (1.25.11)\n",
       "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.0.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (2020.12.5)\n",
       "Requirement already satisfied: zipp>=0.5 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.4.0)\n",
       "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (0.4.8)\n",
       "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\manish\\anaconda3\\lib\\site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.6->tensorflow<2.8.0,>=2.7.0->tensorflow-io) (3.1.1)\n",
@@ -116,7 +116,7 @@
    "outputs": [],
    "source": [
     "!curl -sSOL https://downloads.apache.org/kafka/2.8.1/kafka_2.12-2.8.1.tgz\n",
-    "!tar -xzf kafka_2.12-2.8.1.tgz "
+    "!tar -xzf kafka_2.12-2.8.1.tgz"
    ]
   },
   {
@@ -130,11 +130,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "0gXpOLebNPMJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'.' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n",
+      "'.' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "!./kafka_2.12-2.8.1/bin/zookeeper-server-start.sh -daemon ./kafka_2.12-2.8.1/config/zookeeper.properties\n",
     "!./kafka_2.12-2.8.1/bin/kafka-server-start.sh -daemon ./kafka_2.12-2.8.1/config/server.properties"
